updating lite session